# src/router/user_route.go
@@ -2,15 +2,21 @@ package router
 
 import (
 	"go-journey/src/controller"
+	"go-journey/src/middleware"
 
 	"github.com/gofiber/fiber/v2"
 )
 
 func UserRoutes(app *fiber.App) {
-	api := app.Group("/users")
-	api.Get("/", controller.GetUsers)
-	api.Get("/:id", controller.GetUser)
-	api.Post("/", controller.CreateUser)
-	api.Put("/:id", controller.UpdateUser)
-	api.Delete("/:id", controller.DeleteUser)
+	user := app.Group("/users")
+
+	// 🔓 Public routes
+	user.Get("/", controller.GetUsers)
+	user.Get("/:id", controller.GetUser)
+
+	// 🔒 Protected routes
+	user.Use(middleware.Auth())
+	user.Post("/", controller.CreateUser)
+	user.Put("/:id", controller.UpdateUser)
+	user.Delete("/:id", controller.DeleteUser)
 }
